Fix availability linespacing, dark-mode titlebar color

--- a/Fw2020/scss/colors.scss
+++ b/Fw2020/scss/colors.scss
@@ -45,7 +45,7 @@ $gray-10: #fefeff;
 @media (prefers-color-scheme: dark) {
   :root {
     --titlebar-color: #{white(.82)};
-    --titlebar-bg: #1e2028;
+    --titlebar-bg: #262628;
     --navigation-color: #{white(.82)};
     --navigation-secondary-color: #{white(.6)};
     --navigation-bg: #202428;
